--- a/esg_management_goal.html
+++ b/esg_management_goal.html
@@ -187,7 +187,7 @@
     <div class="cont">
         <strong class="cont_tit">비전과 핵심가치</strong>
         <div class="quotes">
-            <img src="../ak/images/ico_quotes_black.png" alt="큰따옴표 이미지">
+            <img src="/images/ico_quotes_black.png" alt="큰따옴표 이미지">
         </div>
         <p class="sub-desc fw-300">지속가능경영을 통해<br class="mo">
             사람, 환경, 사회, 기업이 함께하는<br>
@@ -195,7 +195,7 @@
         <ul class="ak-value-list goal">
             <li>
                 <span class="img-wrap">
-                    <img src="../ak/images/img_vision01.png" alt="">
+                    <img src="/images/img_vision01.png" alt="">
                 </span>
                 <div class="inner">
                     <em class="tit">혁신과 도전</em>
@@ -205,7 +205,7 @@
             </li>
             <li>
                 <span class="img-wrap">
-                    <img src="../ak/images/img_vision02.png" alt="">
+                    <img src="/images/img_vision02.png" alt="">
                 </span>
                 <div class="inner">
                     <em class="tit">감사와 소통</em>
@@ -215,7 +215,7 @@
             </li>
             <li>
                 <span class="img-wrap">
-                    <img src="../ak/images/img_vision03.png" alt="">
+                    <img src="/images/img_vision03.png" alt="">
                 </span>
                 <div class="inner">
                     <em class="tit">신뢰와 정도</em>
@@ -230,7 +230,7 @@
         <ul class="ak-value-list reflection">
             <li>
                 <span class="img-wrap">
-                    <img src="../ak/images/img_vision04.png" alt="">
+                    <img src="/images/img_vision04.png" alt="">
                 </span>
                 <div class="inner">
                     <em class="tit">For Earth</em>
@@ -239,7 +239,7 @@
             </li>
             <li>
                 <span class="img-wrap">
-                    <img src="../ak/images/img_vision05.png" alt="">
+                    <img src="/images/img_vision05.png" alt="">
                 </span>
                 <div class="inner">
                     <em class="tit">For Community</em>
@@ -248,7 +248,7 @@
             </li>
             <li>
                 <span class="img-wrap">
-                    <img src="../ak/images/img_vision06.png" alt="">
+                    <img src="/images/img_vision06.png" alt="">
                 </span>
                 <div class="inner">
                     <em class="tit">For Shareholder</em>
