--- a/esg_management_level.html
+++ b/esg_management_level.html
@@ -190,25 +190,25 @@
                 <em class="cont_tit">2021년 ESG 평가결과 등급</em>
                 <span class="desc">(2021 한국기업지배구조원)</span>
                 <div class="esg-mark total">
-                    <img src="../ak/images/img_esgmark_2021_total.png" alt="esg 종합등급 B+">
+                    <img src="/images/img_esgmark_2021_total.png" alt="esg 종합등급 B+">
                     <span class="name">종합등급</span>
                 </div>
                 <ul class="esg-mark-list">
                     <li>
                         <div class="esg-mark env">
-                            <img src="../ak/images/img_esgmark_2021_env.png" alt="esg 환경부문 B">
+                            <img src="/images/img_esgmark_2021_env.png" alt="esg 환경부문 B">
                             <span class="name">환경부문</span>
                         </div>
                     </li>
                     <li>
                         <div class="esg-mark social">
-                            <img src="../ak/images/img_esgmark_2021_social.png" alt="esg 사회부문 B+">
+                            <img src="/images/img_esgmark_2021_social.png" alt="esg 사회부문 B+">
                             <span class="name">사회부문</span>
                         </div>
                     </li>
                     <li>
                         <div class="esg-mark gov">
-                            <img src="../ak/images/img_esgmark_2021_gov.png" alt="esg 지배구조부문 B+">
+                            <img src="/images/img_esgmark_2021_gov.png" alt="esg 지배구조부문 B+">
                             <span class="name">지배구조부문</span>
                         </div>
                     </li>
@@ -218,25 +218,25 @@
                 <em class="cont_tit">2020년 ESG 평가결과 등급</em>
                 <span class="desc">(2020 한국기업지배구조원)</span>
                 <div class="esg-mark total">
-                    <img src="../ak/images/img_esgmark_2020_total.png" alt="esg 종합등급 B+">
+                    <img src="/images/img_esgmark_2020_total.png" alt="esg 종합등급 B+">
                     <span class="name">종합등급</span>
                 </div>
                 <ul class="esg-mark-list">
                     <li>
                         <div class="esg-mark env">
-                            <img src="../ak/images/img_esgmark_2020_env.png" alt="esg 환경부문 C">
+                            <img src="/images/img_esgmark_2020_env.png" alt="esg 환경부문 C">
                             <span class="name">환경부문</span>
                         </div>
                     </li>
                     <li>
                         <div class="esg-mark social">
-                            <img src="../ak/images/img_esgmark_2020_social.png" alt="esg 사회부문 B+">
+                            <img src="/images/img_esgmark_2020_social.png" alt="esg 사회부문 B+">
                             <span class="name">사회부문</span>
                         </div>
                     </li>
                     <li>
                         <div class="esg-mark gov">
-                            <img src="../ak/images/img_esgmark_2020_gov.png" alt="esg 지배구조부문 B+">
+                            <img src="/images/img_esgmark_2020_gov.png" alt="esg 지배구조부문 B+">
                             <span class="name">지배구조부문</span>
                         </div>
                     </li>
