--- a/introduce_ceo.html
+++ b/introduce_ceo.html
@@ -188,7 +188,7 @@
             꾸준히 성장해 나가겠습니다.</p>
         <div class="ceo-img-wrap">
             <span class="img-wrap">
-                <img src="../ak/images/img_ceo.png" alt="애경홀딩스 대표이사 이석주 사진">
+                <img src="/images/img_ceo.png" alt="애경홀딩스 대표이사 이석주 사진">
             </span>
             <p class="name">애경홀딩스 대표이사 <em>이</em><em>석</em><em>주</em></p>
         </div>
@@ -251,8 +251,8 @@
         </ul>
     </div>
     <div class="catchphrase">
-        <img src="../ak/images/img_copy_mo.png" alt="사랑합니다. 그리고존경합니다." class="mo">
-        <img src="../ak/images/img_copy_pc.png" alt="사랑합니다. 그리고존경합니다." class="pc">
+        <img src="/images/img_copy_mo.png" alt="사랑합니다. 그리고존경합니다." class="mo">
+        <img src="/images/img_copy_pc.png" alt="사랑합니다. 그리고존경합니다." class="pc">
     </div>
 </div>
 <!--//본문영역-->
