--- a/introduce_ci.html
+++ b/introduce_ci.html
@@ -196,19 +196,19 @@
             </div>
             <div class="ci-wrap">
                 <span class="symbol">
-                    <img src="../ak/images/img_symbol.png" alt="ak홀딩스 심볼마크">
+                    <img src="/images/img_symbol.png" alt="ak홀딩스 심볼마크">
                 </span>
                 <span class="symbol-size">
-                    <img src="../ak/images/img_symbol_size.png" alt="ak홀딩스 심볼마크 최소크기">
+                    <img src="/images/img_symbol_size.png" alt="ak홀딩스 심볼마크 최소크기">
                 </span>
                 <p class="comment">※ 심벌마크를 단독으로 사용하는 것을 허용하지 않습니다.</p>
             </div>
             <ul class="download-wrap">
                 <li>
-                    <a href="javascript:;" class="btn-download">AI 파일 다운로드</a>
+                    <a href="/images/AK홀딩스(주)CI.ai" class="btn-download">AI 파일 다운로드</a>
                 </li>
                 <li>
-                    <a href="javascript:;" class="btn-download">JPG 파일 다운로드</a>
+                    <a href="/images/AK홀딩스(주)CI.JPG" class="btn-download">JPG 파일 다운로드</a>
                 </li>
             </ul>
         </div>
