--- a/introduce_history.html
+++ b/introduce_history.html
@@ -227,7 +227,7 @@
                             <p>애경산업 2021년 ESG종합등급 A획득</p>
                             <p>애경산업 용인물류센터 준공</p>
                             <div class="img">
-                                <img src="../ak/images/img_2021_11.png" alt="">
+                                <img src="/images/img_2021_11.png" alt="">
                             </div>
                             <p>애경케미칼 출범(애경유화, 애경화학, AK켐텍 합병)</p>
                         </div>
@@ -256,7 +256,7 @@
                         <div class="desc">
                             <p>AK VINA 베트남 동나이성 선정 ‘2020년 안전우수기업’</p>
                             <div class="img">
-                                <img src="../ak/images/img_2021_06.png" alt="">
+                                <img src="/images/img_2021_06.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -265,7 +265,7 @@
                         <div class="desc">
                             <p>애경특수도료 포항공장 본관 리뉴얼</p>
                             <div class="img">
-                                <img src="../ak/images/img_2021_04.png" alt="">
+                                <img src="/images/img_2021_04.png" alt="">
                             </div>
                             <p>제주항공 한국경영인증원(KMR) GREEN-STAR인증 3년연속 LCC부문 1위 선정</p>
                         </div>
@@ -312,7 +312,7 @@
                         <div class="desc">
                             <p>HIEX 서울 홍대, 매출 100억 달성</p>
                             <div class="img">
-                                <img src="../ak/images/img_2021_04.png" alt="">
+                                <img src="/images/img_2021_04.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -335,7 +335,7 @@
                         <div class="desc">
                             <p>제주항공 인천공항 전용 ‘JJ라운지’ 오픈 </p>
                             <div class="img">
-                                <img src="../ak/images/img_2019_01.png" alt="">
+                                <img src="/images/img_2019_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -375,7 +375,7 @@
                             <p>모두락 애경산업 장애인 표준사업장 카페포틴 오픈</p>
                             <p>애경타워 준공(AK플라자 홍대점, HIEX서울홍대 오픈)</p>
                             <div class="img">
-                                <img src="../ak/images/img_2018_01.png" alt="">
+                                <img src="/images/img_2018_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -407,7 +407,7 @@
                         <div class="desc">
                             <p>애경유화 가소제 플랜트 신규 증설(현 애경케미칼)</p>
                             <div class="img">
-                                <img src="../ak/images/img_2017_01.png" alt="">
+                                <img src="/images/img_2017_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -416,7 +416,7 @@
                         <div class="desc">
                             <p>제주항공, 항공업계 최초 자회사형 장애인 표준사업장 모두락 설립</p>
                             <div class="img">
-                                <img src="../ak/images/img_2017_02.png" alt="">
+                                <img src="/images/img_2017_02.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -443,7 +443,7 @@
                         <div class="desc">
                             <p>애경산업 트리오 50주년 BI 변경</p>
                             <div class="img">
-                                <img src="../ak/images/img_2016_01.png" alt="">
+                                <img src="/images/img_2016_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -457,7 +457,7 @@
                         <div class="desc">
                             <p>제주항공 국적 LCC 첫 상장</p>
                             <div class="img">
-                                <img src="../ak/images/img_2015_01.png" alt="">
+                                <img src="/images/img_2015_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -471,7 +471,7 @@
                         <div class="desc">
                             <p>수원애경역사 노보텔 앰배서더 수원 그랜드 오픈</p>
                             <div class="img">
-                                <img src="../ak/images/img_2014_01.png" alt="">
+                                <img src="/images/img_2014_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -498,7 +498,7 @@
                         <div class="desc">
                             <p>AK레저 설립</p>
                             <div class="img">
-                                <img src="../ak/images/img_2013_01.png" alt="">
+                                <img src="/images/img_2013_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -512,7 +512,7 @@
                         <div class="desc">
                             <p>AK레저 설립</p>
                             <div class="img">
-                                <img src="../ak/images/img_2012_01.png" alt="">
+                                <img src="/images/img_2012_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -555,7 +555,7 @@
                         <div class="desc">
                             <p>애경백화점 B.I변경(AK플라자)</p>
                             <div class="img">
-                                <img src="../ak/images/img_2009_01.png" alt="">
+                                <img src="/images/img_2009_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -616,7 +616,7 @@
                         <div class="desc">
                             <p>삼성물산 유통부문 인수(현 AK플라자 분당점, AK몰)</p>
                             <div class="img">
-                                <img src="../ak/images/img_2007_01.png" alt="">
+                                <img src="/images/img_2007_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -647,7 +647,7 @@
                         <div class="desc">
                             <p>제주항공 설립</p>
                             <div class="img">
-                                <img src="../ak/images/img_2005_01.png" alt="">
+                                <img src="/images/img_2005_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -714,7 +714,7 @@
                         <div class="desc">
                             <p>애경종합기술원 개원</p>
                             <div class="img">
-                                <img src="../ak/images/img_2001_01.png" alt="">
+                                <img src="/images/img_2001_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -740,7 +740,7 @@
                         <div class="desc">
                             <p>애경복지재단 설립</p>
                             <div class="img">
-                                <img src="../ak/images/img_2000_01.png" alt="">
+                                <img src="/images/img_2000_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -799,7 +799,7 @@
                         <div class="desc">
                             <p>애경백화점 구로본점 오픈(현 AK플라자)</p>
                             <div class="img">
-                                <img src="../ak/images/img_1993_01.png" alt="">
+                                <img src="/images/img_1993_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -813,7 +813,7 @@
                         <div class="desc">
                             <p>애경화학, 청양공장 준공 및 가동(현 애경케미칼)</p>
                             <div class="img">
-                                <img src="../ak/images/img_1992_01.png" alt="">
+                                <img src="/images/img_1992_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -838,7 +838,7 @@
                         <div class="desc">
                             <p>애경개발 중부컨트리클럽 개장 </p>
                             <div class="img">
-                                <img src="../ak/images/img_1987_01.png" alt="">
+                                <img src="/images/img_1987_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -874,7 +874,7 @@
                         <div class="desc">
                             <p>국내 최초 무공해 세제 원료 AOS 개발</p>
                             <div class="img">
-                                <img src="../ak/images/img_1982_01.png" alt="">
+                                <img src="/images/img_1982_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -883,7 +883,7 @@
                         <div class="desc">
                             <p>애경쉘 설립(현 애경케미칼, 애경특수도료)</p>
                             <div class="img">
-                                <img src="../ak/images/img_1982_02.png" alt="">
+                                <img src="/images/img_1982_02.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -925,7 +925,7 @@
                         <div class="desc">
                             <p>애경유지공업 대전공장 준공</p>
                             <div class="img">
-                                <img src="../ak/images/img_1982_02.png" alt="">
+                                <img src="/images/img_1982_02.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -939,7 +939,7 @@
                         <div class="desc">
                             <p>애경유지공업 장영신 대표이사 취임</p>
                             <div class="img">
-                                <img src="../ak/images/img_1972_01.png" alt="">
+                                <img src="/images/img_1972_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -953,7 +953,7 @@
                         <div class="desc">
                             <p>삼경화성 설립(현 애경케미칼)</p>
                             <div class="img">
-                                <img src="../ak/images/img_1970_01.png" alt="">
+                                <img src="/images/img_1970_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -973,7 +973,7 @@
                         <div class="desc">
                             <p>영등포 도료 공장 준공 </p>
                             <div class="img">
-                                <img src="../ak/images/img_1967_01.png" alt="">
+                                <img src="/images/img_1967_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -987,7 +987,7 @@
                         <div class="desc">
                             <p>국내 최초 주방세제 트리오 발매</p>
                             <div class="img">
-                                <img src="../ak/images/img_1966_01.png" alt="">
+                                <img src="/images/img_1966_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -1029,7 +1029,7 @@
                         <div class="desc">
                             <p>국내 최초 미향 비누 발매</p>
                             <div class="img">
-                                <img src="../ak/images/img_1956_01.png" alt="">
+                                <img src="/images/img_1956_01.png" alt="">
                             </div>
                         </div>
                     </li>
@@ -1043,7 +1043,7 @@
                         <div class="desc">
                             <p>애경 유지공업 설립</p>
                             <div class="img">
-                                <img src="../ak/images/img_1954_01.png" alt="">
+                                <img src="/images/img_1954_01.png" alt="">
                             </div>
                         </div>
                     </li>
