--- a/ir_contact.html
+++ b/ir_contact.html
@@ -186,7 +186,7 @@
         <div class="contact-ir">
             <div class="inner">
                 <div class="quotes">
-                    <img src="../ak/images/ico_quotes_black.png" alt="큰따옴표 이미지">
+                    <img src="/images/ico_quotes_black.png" alt="큰따옴표 이미지">
                 </div>
                 <p class="desc">AK홀딩스 IR과 관련된 문의는<br>
                     아래 전화문의를 통해<br class="mo">
