--- a/value_talent.html
+++ b/value_talent.html
@@ -188,13 +188,13 @@
         <div class="value-talent">
             <div class="visual-wrap">
                 <span>
-                    <img src="../ak/images/img_love_respect.png" alt="사랑합니다 존경합니다">
+                    <img src="/images/img_love_respect.png" alt="사랑합니다 존경합니다">
                 </span>
             </div>
             <div class="desc-wrap">
                 <div class="quotes">
-                    <img src="../ak/images/ico_quotes_blue.png" alt="큰따옴표 이미지" class="mo">
-                    <img src="../ak/images/ico_quotes_black.png" alt="큰따옴표 이미지" class="pc">
+                    <img src="/images/ico_quotes_blue.png" alt="큰따옴표 이미지" class="mo">
+                    <img src="/images/ico_quotes_black.png" alt="큰따옴표 이미지" class="pc">
                 </div>
                 <em class="tit">
                     애경은 사람을 사랑하고<br> 존경하는 마음을 가진 사람들이<br class="mo"> 함께합니다.
