--- a/ir_governance.html
+++ b/ir_governance.html
@@ -252,7 +252,7 @@
                 </tbody>
             </table>
             <div class="drag-noti mo">
-                <img src="../ak/images/img_drag.png" alt="좌우로 드레그 해보세요">
+                <img src="/images/img_drag.png" alt="좌우로 드레그 해보세요">
             </div>
         </div>
 
@@ -365,7 +365,7 @@
                 </tbody>
             </table>
             <div class="drag-noti mo">
-                <img src="../ak/images/img_drag.png" alt="좌우로 드레그 해보세요">
+                <img src="/images/img_drag.png" alt="좌우로 드레그 해보세요">
             </div>
         </div>
         <ul class="notice-list">
