--- a/value_founded.html
+++ b/value_founded.html
@@ -192,7 +192,7 @@
                 <p>애경 그룹은 사랑과 존경의 가치를 기반으로<br class="mo"> 늘 고객 곁에서 함께 하며<br class="pc"> 풍요롭고 살기 좋은<br class="mo"> 세상을 만들어 나가기 위해 노력하고 있습니다.</p>
             </div>
             <div class="ak-cally">
-                <img src="../ak/images/img_cally_ak.png" alt="愛敬(애경)">
+                <img src="/images/img_cally_ak.png" alt="愛敬(애경)">
             </div>
         </div>
     </div>
