--- a/value_management.html
+++ b/value_management.html
@@ -187,13 +187,13 @@
     <div class="cont pd-rl-20">
         <strong class="cont_tit">풍요롭고 행복한 삶을<br class="mo">창조하는 기업</strong>
         <div class="quotes">
-            <img src="../ak/images/ico_quotes_black.png" alt="큰따옴표 이미지">
+            <img src="/images/ico_quotes_black.png" alt="큰따옴표 이미지">
         </div>
         <p class="sub-desc fw-300">경쟁에서 앞서가는 기업은<br class="mo"> 이윤을 창조하고 지속적인 성장을 함으로써<br> 국가와 사회에 풍요롭고 행복한<br class="mo"> 삶을 창조합니다.</p>
         <ul class="ak-value-list">
             <li>
                 <span class="img-wrap">
-                    <img src="../ak/images/bg_ak_value01.png" alt="">
+                    <img src="/images/bg_ak_value01.png" alt="">
                 </span>
                 <div class="inner">
                     <em class="tit">앞서가는 경영</em>
@@ -202,7 +202,7 @@
             </li>
             <li>
                 <span class="img-wrap">
-                    <img src="../ak/images/bg_ak_value02.png" alt="">
+                    <img src="/images/bg_ak_value02.png" alt="">
                 </span>
                 <div class="inner">
                     <em class="tit">앞서가는 사고</em>
@@ -211,7 +211,7 @@
             </li>
             <li>
                 <span class="img-wrap">
-                    <img src="../ak/images/bg_ak_value03.png" alt="">
+                    <img src="/images/bg_ak_value03.png" alt="">
                 </span>
                 <div class="inner">
                     <em class="tit">앞서가는 기술</em>
