--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 
 <header class="main-top">
     <div class="head">
-        <h1><a href=""><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <h1><a href="/"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
                 <li><a href="/introduce_ceo.html">그룹 소개</a></li>
@@ -202,7 +202,7 @@
                 <!-- 개발 연동 영역 -->
                 <!-- style background 역역 이미지 교체 필요-->
                 <li style="background: url(./images/bg_main_newslist01.png) no-repeat center center;">
-                    <a href="#">
+                    <a href="https://211.43.193.249/fo/akNewsView.do?uid=541&page=1&range=1">
                         <div>
                             <h4>애경케미칼</h4>
                             <p class="con">'줍깅, 함께해요' 건강과<br class="pc"> 환경을<br class="mo">
@@ -213,12 +213,12 @@
                 </li>
 
                 <li style="background: url(./images/bg_main_newslist02.png) no-repeat center center;">
-                    <a href="#">
+                    <a href="https://211.43.193.249/fo/akNewsView.do?uid=540&page=1&range=1">
                         <div>
-                            <h4>웹진 8호(vol.431)</h4>
-                            <p class="con">화학 3사 통합,<br>
-                                '애경케미칼(가칭)' 출범</p>
-                            <p class="date">2022.10.26</p>
+                            <h4>애경산업</h4>
+                            <p class="con">케라시스 퍼퓸 샴푸 출시 10주년 기념<br>
+                                ‘케라시스 퍼퓸’ 출시</p>
+                            <p class="date">2022.05.26</p>
                         </div>
                     </a>
                 </li>
