--- a/ir_contact.html
+++ b/ir_contact.html
@@ -11,30 +11,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="Contact IR | AK 홀딩스" />
-    <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, Contact IR" />
-    <meta name="og:site_name" content="AK 홀딩스 Contact IR" />
-    <meta name="og:title" content="AK 홀딩스 Contact IR" />
-    <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <meta name="title" content="AK 홀딩스" />
+    <meta name="description" content="애경그룹 및 계열사 소개, ESG, 뉴스룸, IR 정보 제공" />
+    <meta name="keywords" content="애경, AK 홀딩스, AK, 애경 그룹, 애경 그룹지주사, 애경산업, AK플라자, 애경케미칼, 제주항공, 중부CC"/>
+    <meta name="og:site_name" content="AK 홀딩스" />
+    <meta name="og:title" content="AK 홀딩스" />
+    <meta name="og:description" content="앞서가는 사고, 앞서가는 기술, 앞서가는 경영"/>
+    <meta property="og:image" content="/og_thumb.png" />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <title>Contact IR | AK 홀딩스</title>
+    <title>AK 홀딩스</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5JGW9K"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<header>
+<header class="top">
     <div class="head">
-        <h1><a href="#"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <h1><a href="/"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
-                <li><a href="#">그룹 소개</a></li>
-                <li><a href="#">애경 ESG</a></li>
-                <li><a href="#">뉴스룸</a></li>
-                <li><a href="#">IR</a></li>
+                <li><a href="/introduce_ceo.html">그룹 소개</a></li>
+                <li><a href="/esg_management_goal.html">애경 ESG</a></li>
+                <li><a href="/ak_news.html">뉴스룸</a></li>
+                <li><a href="/ir_governance.html">IR</a></li>
             </ul>
         </div>
         <button class="btn-show-menu" id="btnShowMenu" />
@@ -47,23 +48,23 @@
                     <li>
                         <ul>
                             <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
-                            <li><a href="#">애경 가치</a></li>
-                            <li><a href="#">창업이념</a></li>
-                            <li><a href="#">경영이념</a></li>
-                            <li><a href="#">인재상</a></li>
+                            <li><a href="/value_founded.html">애경 가치</a></li>
+                            <li><a href="/value_founded.html">창업이념</a></li>
+                            <li><a href="/value_management">경영이념</a></li>
+                            <li><a href="/value_talent">인재상</a></li>
                             <li class="tow-nd"><a href="#">가치체계도</a></li>
                             <li class="tow-nd"><a href="#">미션과 비전</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">Corporate Identity</a></li>
-                            <li><a href="#">의미</a></li>
+                            <li><a href="/introduce_ci.html">Corporate Identity</a></li>
+                            <li><a href="/introduce_ci.html">의미</a></li>
                             <li class="tow-nd"><a href="#">로고 규정</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">회사 소개</a></li>
-                            <li><a href="#">CEO Message</a></li>
+                            <li><a href="/introduce_ceo.html">회사 소개</a></li>
+                            <li><a href="/introduce_ceo.html">CEO Message</a></li>
                             <li class="tow-nd"><a href="#">홀딩스 역할</a></li>
                             <li class="tow-nd"><a href="#">거버넌스 구조</a></li>
                         </ul>
@@ -72,27 +73,26 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">연혁</a></li>
+                            <li><a href="/introduce_history.html">연혁</a></li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <em></em>
             <li>
                 <h3><a href="#">애경 ESG</a></h3>
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="#">ESG 경영</a></li>
-                            <li><a href="#">ESG 경영 목표</a></li>
-                            <li><a href="#">ESG 등급</a></li>
+                            <li><a href="/esg_management_goal.html">ESG 경영</a></li>
+                            <li><a href="/esg_management_goal.html">ESG 경영 목표</a></li>
+                            <li><a href="/esg_management_level.html">ESG 등급</a></li>
                             <li class="tow-nd"><a href="#">다양성과 포용성</a></li>
                             <li class="tow-nd"><a href="#">ESG 추진체계(조직)</a></li>
                             <li class="tow-nd"><a href="#">지속가능경영 보고서</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">ESG 소식</a></li>
+                            <li><a href="/esg_news.html">ESG 소식</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
@@ -104,13 +104,12 @@
                     </li>
                 </ul>
             </li>
-            <em></em>
             <li>
                 <h3><a href="#">뉴스룸</a></h3>
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="#">애경뉴스</a></li>
+                            <li><a href="/ak_news.html">애경뉴스</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
@@ -126,34 +125,33 @@
                     </li>
                 </ul>
             </li>
-            <em></em>
             <li>
                 <h3><a href="#">IR</a></h3>
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="#">지배구조</a></li>
-                            <li><a href="#">기업지배구조</a></li>
+                            <li><a href="/ir_governance.html">지배구조</a></li>
+                            <li><a href="/ir_governance.html">기업지배구조</a></li>
                             <li class="tow-nd"><a href="#">기업지배구조헌장</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">재무정보</a></li>
-                            <li><a href="#">재무상태표</a></li>
-                            <li><a href="#">손익계산서</a></li>
-                            <li><a href="#">현금흐름표</a></li>
+                            <li><a href="/financial_income2021.html">재무정보</a></li>
+                            <li><a href="/financial_income2021.html">재무상태표</a></li>
+                            <li><a href="/financial_statement2021.html">손익계산서</a></li>
+                            <li><a href="/financial_cash2021.html">현금흐름표</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">공시정보</a></li>
-                            <li><a href="#">공시자료</a></li>
-                            <li><a href="#">공고</a></li>
+                            <li><a href="/investment_info.html">공시정보</a></li>
+                            <li><a href="/investment_info.html">공시자료</a></li>
+                            <li><a href="/investment_info_list.html">공고</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">IR 정보</a></li>
-                            <li><a href="#">Contact IR</a></li>
-                            <li><a href="#">사업보고서</a></li>
+                            <li><a href="/ir_contact.html">IR 정보</a></li>
+                            <li><a href="/ir_contact.html">Contact IR</a></li>
+                            <li><a href="/ir_business.html">사업보고서</a></li>
                             <li class="tow-nd"><a href="#">감사보고서</a></li>
                         </ul>
                     </li>
@@ -221,8 +219,8 @@
         </p>
     </div>
 </footer>
-<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
 <script src="/js/common.js"></script>
 </body>
