--- a/list.html
+++ b/list.html
@@ -28,7 +28,7 @@
     <tr>
         <td>0</td>
         <td>메인</td>
-        <td><a href="/main.html">main.html</a></td>
+        <td><a href="/index.html">main.html</a></td>
         <td><p style="color:#ff0000;">6/6업데이트</p></td>
     </tr>
     <tr>
