--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5JGW9K"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-
-<header class="main-top">
+<!-- 6/8없데이트 header에 .main추가 -->
+<header class="main main-top">
     <div class="head">
         <h1><a href="/"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
