--- a/financial_cash2021.html
+++ b/financial_cash2021.html
@@ -313,7 +313,7 @@
 <footer>
     <div class="info">
         <h1><a href="#">AK홀딩스(주)</a></h1>
-        <p>04051 서울특별시 마포구 양화로 188, 14층(동교동, 애경타워)</p>
+        <p>04051 서울특별시 마포구 양화로 188, 14층<br class="mo"> (동교동, 애경타워)</p> <!-- 6/8 업데이트 <br class="mo"> 추가 -->
     </div>
     <div class="link">
         <p>
