--- a/esg_news_detail.html
+++ b/esg_news_detail.html
@@ -225,7 +225,7 @@ AK플라자는 애경그룹 지주회사인 AK홀딩스,
 <footer>
     <div class="info">
         <h1><a href="#">AK홀딩스(주)</a></h1>
-        <p>04051 서울특별시 마포구 양화로 188, 14층(동교동, 애경타워)</p>
+        <p>04051 서울특별시 마포구 양화로 188, 14층<br class="mo"> (동교동, 애경타워)</p> <!-- 6/8 업데이트 <br class="mo"> 추가 -->
     </div>
     <div class="link">
         <p>
