--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 앞서가는 <strong>기술</strong>,<br class="mo">
                 앞서가는 <strong>경영</strong>으로
                 <p>
-                    <strong>풍요롭고 행복한</strong><br class="mo">
+                    <strong>풍요롭고 행복한 </strong><br class="mo">
                     <strong>삶을 창조합니다</strong>
                 </p>
             </div>
@@ -268,7 +268,7 @@
 <footer>
     <div class="info">
         <h1><a href="#">AK홀딩스(주)</a></h1>
-        <p>04051 서울특별시 마포구 양화로 188, 14층(동교동, 애경타워)</p>
+        <p>04051 서울특별시 마포구 양화로 188, 14층<br class="mo"> (동교동, 애경타워)</p> <!-- 6/8 업데이트 <br class="mo"> 추가 -->
     </div>
     <div class="link">
         <p>
