--- a/ir_contact.html
+++ b/ir_contact.html
@@ -193,11 +193,11 @@
             <ul class="ir-phone">
                 <li>
                     <em class="tit">AK홀딩스㈜ 대표번호</em>
-                    <span class="number">02&middot;768&middot;2923</span>
+                    <span class="number"><a href="tel:027682923">02&middot;768&middot;2923</a></span>
                 </li>
                 <li>
                     <em class="tit">AK홀딩스㈜ IR 담당</em>
-                    <span class="number">02&middot;768&middot;2914</span>
+                    <span class="number"><a href="tel:027682914">02&middot;768&middot;2914</a></span>
                 </li>
             </ul>
         </div>
