--- a/ir_governance.html
+++ b/ir_governance.html
@@ -172,7 +172,7 @@
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="active"><a href="javascript:;">기업지배구조</a></li>
-                <li><a href="javascript:;">기업지배구조헌장</a></li>
+                <li class="tow-nd"><a href="javascript:;">기업지배구조헌장</a></li>
             </ul>
         </div>
     </div>
