--- a/introduce_history.html
+++ b/introduce_history.html
@@ -32,9 +32,9 @@
         <h1><a href="/"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
-                <li><a href="/introduce_ceo.html">그룹 소개</a></li>
+                <li class="active"><a href="/introduce_ceo.html">그룹 소개</a></li>
                 <li><a href="/esg_management_goal.html">애경 ESG</a></li>
-                <li><a href="//fo/akNews.do">뉴스룸</a></li>
+                <li><a href="/fo/akNews.do">뉴스룸</a></li>
                 <li><a href="/ir_governance.html">IR</a></li>
             </ul>
         </div>
@@ -73,7 +73,7 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="/introduce_history.html">연혁</a></li>
+                            <li class="active"><a href="/introduce_history.html">연혁</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -92,7 +92,7 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="//fo/esgNews.do">ESG 소식</a></li>
+                            <li><a href="/fo/esgNews.do">ESG 소식</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
@@ -109,7 +109,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="//fo/akNews.do">애경뉴스</a></li>
+                            <li><a href="/fo/akNews.do">애경뉴스</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
