--- a/investment_info.html
+++ b/investment_info.html
@@ -34,8 +34,8 @@
             <ul>
                 <li><a href="/introduce_ceo.html">그룹 소개</a></li>
                 <li><a href="/esg_management_goal.html">애경 ESG</a></li>
-                <li><a href="//fo/akNews.do">뉴스룸</a></li>
-                <li><a href="/ir_governance.html">IR</a></li>
+                <li><a href="/fo/akNews.do">뉴스룸</a></li>
+                <li class="active"><a href="/ir_governance.html">IR</a></li>
             </ul>
         </div>
         <button class="btn-show-menu" id="btnShowMenu" />
@@ -92,7 +92,7 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="//fo/esgNews.do">ESG 소식</a></li>
+                            <li><a href="/fo/esgNews.do">ESG 소식</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
@@ -109,7 +109,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="//fo/akNews.do">애경뉴스</a></li>
+                            <li><a href="/fo/akNews.do">애경뉴스</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
@@ -144,7 +144,7 @@
                         <em></em>
                         <ul>
                             <li><a href="/investment_info.html">공시정보</a></li>
-                            <li><a href="/investment_info.html">공시자료</a></li>
+                            <li class="active"><a href="/investment_info.html">공시자료</a></li>
                             <li><a href="/investment_info_list.html">공고</a></li>
                         </ul>
                         <em></em>
@@ -170,6 +170,7 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
+                <li class="mo"><a href="javascript:;">공시자료</a></li>
                 <li class="active"><a href="javascript:;">공시자료</a></li>
                 <li><a href="/investment_info_list.html">공고</a></li>
             </ul>
