--- a/ir_business.html
+++ b/ir_business.html
@@ -34,8 +34,8 @@
             <ul>
                 <li><a href="/introduce_ceo.html">그룹 소개</a></li>
                 <li><a href="/esg_management_goal.html">애경 ESG</a></li>
-                <li><a href="//fo/akNews.do">뉴스룸</a></li>
-                <li><a href="/ir_governance.html">IR</a></li>
+                <li><a href="/fo/akNews.do">뉴스룸</a></li>
+                <li class="active"><a href="/ir_governance.html">IR</a></li>
             </ul>
         </div>
         <button class="btn-show-menu" id="btnShowMenu" />
@@ -92,7 +92,7 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="//fo/esgNews.do">ESG 소식</a></li>
+                            <li><a href="/fo/esgNews.do">ESG 소식</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
@@ -109,7 +109,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="//fo/akNews.do">애경뉴스</a></li>
+                            <li><a href="/fo/akNews.do">애경뉴스</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
@@ -151,7 +151,7 @@
                         <ul>
                             <li><a href="/ir_contact.html">IR 정보</a></li>
                             <li><a href="/ir_contact.html">Contact IR</a></li>
-                            <li><a href="/ir_business.html">사업보고서</a></li>
+                            <li class="active"><a href="/ir_business.html">사업보고서</a></li>
                             <li class="tow-nd"><a href="#">감사보고서</a></li>
                         </ul>
                     </li>
@@ -170,7 +170,8 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li><a href="javascript:;">Contact IR</a></li>
+                <li class="mo"><a href="javascript:;">사업보고서</a></li>
+                <li><a href="/ir_contact.html">Contact IR</a></li>
                 <li class="active"><a href="javascript:;">사업보고서</a></li>
 <!--                <li><a href="/ir_inspect.html">감사보고서</a></li>--><!-- 6/6업데이트 2차메뉴 숨김 -->
             </ul>
