--- a/list.html
+++ b/list.html
@@ -84,7 +84,7 @@
     <tr>
         <td>2</td>
         <td>뉴스룸 > 애경뉴스 리스트</td>
-        <td><a href="//fo/akNews.do">/fo/akNews.do</a></td>
+        <td><a href="/fo/akNews.do">/fo/akNews.do</a></td>
         <td><p>5/29업데이트</p>
             <p style="color:#ff00ff;">6/2업데이트 - 비주얼이미지 경로수정</p>
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
@@ -102,7 +102,7 @@
     <tr>
         <td>4</td>
         <td>뉴스룸 > ESG 소식 리스트</td>
-        <td><a href="//fo/esgNews.do">/fo/esgNews.do</a></td>
+        <td><a href="/fo/esgNews.do">/fo/esgNews.do</a></td>
         <td>5/29업데이트
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
     </tr>
