--- a/esg_management_level.html
+++ b/esg_management_level.html
@@ -33,8 +33,8 @@
         <div class="quick-menu">
             <ul>
                 <li><a href="/introduce_ceo.html">그룹 소개</a></li>
-                <li><a href="/esg_management_goal.html">애경 ESG</a></li>
-                <li><a href="//fo/akNews.do">뉴스룸</a></li>
+                <li class="active"><a href="/esg_management_goal.html">애경 ESG</a></li>
+                <li><a href="/fo/akNews.do">뉴스룸</a></li>
                 <li><a href="/ir_governance.html">IR</a></li>
             </ul>
         </div>
@@ -85,14 +85,14 @@
                         <ul>
                             <li><a href="/esg_management_goal.html">ESG 경영</a></li>
                             <li><a href="/esg_management_goal.html">ESG 경영 목표</a></li>
-                            <li><a href="/esg_management_level.html">ESG 등급</a></li>
+                            <li class="active"><a href="/esg_management_level.html">ESG 등급</a></li>
                             <li class="tow-nd"><a href="#">다양성과 포용성</a></li>
                             <li class="tow-nd"><a href="#">ESG 추진체계(조직)</a></li>
                             <li class="tow-nd"><a href="#">지속가능경영 보고서</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="//fo/esgNews.do">ESG 소식</a></li>
+                            <li><a href="/fo/esgNews.do">ESG 소식</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
@@ -109,7 +109,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="//fo/akNews.do">애경뉴스</a></li>
+                            <li><a href="/fo/akNews.do">애경뉴스</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
@@ -170,6 +170,7 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
+                <li class="mo"><a href="javascript:;">ESG 등급</a></li>
                 <li><a href="/esg_management_goal.html">ESG 경영 목표</a></li>
                 <li class="active"><a href="javascript:;">ESG 등급</a></li>
                 <li class="tow-nd"><a href="javascript:;">다양성과 포용성</a></li>
