--- a/financial_statement2017.html
+++ b/financial_statement2017.html
@@ -34,8 +34,8 @@
             <ul>
                 <li><a href="/introduce_ceo.html">그룹 소개</a></li>
                 <li><a href="/esg_management_goal.html">애경 ESG</a></li>
-                <li><a href="//fo/akNews.do">뉴스룸</a></li>
-                <li><a href="/ir_governance.html">IR</a></li>
+                <li><a href="/fo/akNews.do">뉴스룸</a></li>
+                <li class="active"><a href="/ir_governance.html">IR</a></li>
             </ul>
         </div>
         <button class="btn-show-menu" id="btnShowMenu" />
@@ -92,7 +92,7 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="//fo/esgNews.do">ESG 소식</a></li>
+                            <li><a href="/fo/esgNews.do">ESG 소식</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
@@ -109,7 +109,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="//fo/akNews.do">애경뉴스</a></li>
+                            <li><a href="/fo/akNews.do">애경뉴스</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
@@ -138,7 +138,7 @@
                         <ul>
                             <li><a href="/financial_income2021.html">재무정보</a></li>
                             <li><a href="/financial_income2021.html">재무상태표</a></li>
-                            <li><a href="/financial_statement2021.html">손익계산서</a></li>
+                            <li class="active"><a href="/financial_statement2021.html">손익계산서</a></li>
                             <li><a href="/financial_cash2021.html">현금흐름표</a></li>
                         </ul>
                         <em></em>
