--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul>
                 <li><a href="/introduce_ceo.html">그룹 소개</a></li>
                 <li><a href="/esg_management_goal.html">애경 ESG</a></li>
-                <li><a href="//fo/akNews.do">뉴스룸</a></li>
+                <li><a href="/fo/akNews.do">뉴스룸</a></li>
                 <li><a href="/ir_governance.html">IR</a></li>
             </ul>
         </div>
@@ -93,7 +93,7 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="//fo/esgNews.do">ESG 소식</a></li>
+                            <li><a href="/fo/esgNews.do">ESG 소식</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
@@ -110,7 +110,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="//fo/akNews.do">애경뉴스</a></li>
+                            <li><a href="/fo/akNews.do">애경뉴스</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
@@ -190,7 +190,7 @@
         <div class="news-top">
             <h2>#NEWSROOM</h2>
             <div class="btn-box">
-                <h3><a href="//fo/akNews.do">애경뉴스</a></h3>
+                <h3><a href="/fo/akNews.do">애경뉴스</a></h3>
                 <h3 class="tow-nd"><a href="#">웹진</a></h3>
             </div>
         </div>
@@ -231,7 +231,7 @@
             <h2>#ESG</h2>
             <div class="btn-box">
                 <h3><a href="/esg_management_goal.html">ESG 경영</a></h3>
-                <h3><a href="//fo/esgNews.do">ESG 소식</a></h3>
+                <h3><a href="/fo/esgNews.do">ESG 소식</a></h3>
                 <h3 class="tow-nd"><a href="#">윤리경영</a></h3>
                 <h3 class="tow-nd"><a href="#">애경복지재단</a></h3>
             </div>
@@ -251,7 +251,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="//fo/esgNews.do">
+                    <a href="/fo/esgNews.do">
                         <div>
                             <h4>ESG 소식</h4>
                             <p class="con">각 계열사만의 특성을 발휘하여,<br>
