--- a/introduce_ci.html
+++ b/introduce_ci.html
@@ -32,9 +32,9 @@
         <h1><a href="/"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
-                <li><a href="/introduce_ceo.html">그룹 소개</a></li>
+                <li class="active"><a href="/introduce_ceo.html">그룹 소개</a></li>
                 <li><a href="/esg_management_goal.html">애경 ESG</a></li>
-                <li><a href="//fo/akNews.do">뉴스룸</a></li>
+                <li><a href="/fo/akNews.do">뉴스룸</a></li>
                 <li><a href="/ir_governance.html">IR</a></li>
             </ul>
         </div>
@@ -58,7 +58,7 @@
                         <em></em>
                         <ul>
                             <li><a href="/introduce_ci.html">Corporate Identity</a></li>
-                            <li><a href="/introduce_ci.html">의미</a></li>
+                            <li class="active"><a href="/introduce_ci.html">의미</a></li>
                             <li class="tow-nd"><a href="#">로고 규정</a></li>
                         </ul>
                         <em></em>
@@ -92,7 +92,7 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="//fo/esgNews.do">ESG 소식</a></li>
+                            <li><a href="/fo/esgNews.do">ESG 소식</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
@@ -109,7 +109,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="//fo/akNews.do">애경뉴스</a></li>
+                            <li><a href="/fo/akNews.do">애경뉴스</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
@@ -170,6 +170,7 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
+                <li class="mo"><a href="javascript:;">의미</a></li>
                 <li class="active"><a href="javascript:;">의미</a></li>
                 <li class="tow-nd"><a href="javascript:;">로고 규정</a></li>
             </ul>
