--- a/ir_governance.html
+++ b/ir_governance.html
@@ -34,8 +34,8 @@
             <ul>
                 <li><a href="/introduce_ceo.html">그룹 소개</a></li>
                 <li><a href="/esg_management_goal.html">애경 ESG</a></li>
-                <li><a href="//fo/akNews.do">뉴스룸</a></li>
-                <li><a href="/ir_governance.html">IR</a></li>
+                <li><a href="/fo/akNews.do">뉴스룸</a></li>
+                <li class="active"><a href="/ir_governance.html">IR</a></li>
             </ul>
         </div>
         <button class="btn-show-menu" id="btnShowMenu" />
@@ -92,7 +92,7 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="//fo/esgNews.do">ESG 소식</a></li>
+                            <li><a href="/fo/esgNews.do">ESG 소식</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
@@ -109,7 +109,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="//fo/akNews.do">애경뉴스</a></li>
+                            <li><a href="/fo/akNews.do">애경뉴스</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
@@ -131,7 +131,7 @@
                     <li>
                         <ul>
                             <li><a href="/ir_governance.html">지배구조</a></li>
-                            <li><a href="/ir_governance.html">기업지배구조</a></li>
+                            <li class="active"><a href="/ir_governance.html">기업지배구조</a></li>
                             <li class="tow-nd"><a href="#">기업지배구조헌장</a></li>
                         </ul>
                         <em></em>
