--- a/financial_income2019.html
+++ b/financial_income2019.html
@@ -163,7 +163,7 @@
 <!--visual 영역-->
 <div class="topArea sub">
     <div class="titArea">
-        <h2 class="tit">재무정보표</h2><!-- 6/8업데이트 오타수정 -->
+        <h2 class="tit">재무정보</h2><!-- 6/8업데이트 오타수정 -->
         <p class="desc">사업 실적을 포함한<br class="mo"> 각종 투자 관련 정보를 제공합니다</p>
     </div>
     <div class="visual financial has-tab"><!-- 6/9업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
