--- a/ir_governance.html
+++ b/ir_governance.html
@@ -715,7 +715,7 @@
                     <li>
                         <p>제14조 (이사에 대한 직무집행감독권)</p>
                         <ul>
-                            <li><em>①</em>이사회는 각 이사가 담당업무를 집행함에 있어 법령
+                            <li><em>①</em>이사회는 각조 이사가 담당업무를 집행함에 있어 법령
                                 또는 정관에 위반하거나 현저히 부당한 방법으로
                                 처리하거나, 처리할 염려가 있다고 인정한 때에는
                                 그 이사에 대하여 관련자료의 제출, 조사 및 설명을
@@ -959,7 +959,7 @@
                     <li>
                         <p>제14조 (외부감사인 선정 등)</p><!-- 6/6업데이트 오타수정 -->
                         <ul>
-                            <li><em>①</em>위원회는 외부감사에 관한법률 제10조 1항에
+                            <li><em>①</em>위원회는 외부장감사에 관한법률 제10조 1항에
                                 의거하여 외부감사인을 선정하여야 하고,
                                 외부감사인 선정에 필요한 기준과 절차를 마련하고
                                 별도의 문서로 작성, 관리한다.</li><!-- 6/6업데이트 오타수정 -->
