--- a/financial_statement2021.html
+++ b/financial_statement2021.html
@@ -10,7 +10,7 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="title" content="AK 홀딩스" />
     <meta name="description" content="애경그룹 및 계열사 소개, ESG, 뉴스룸, IR 정보 제공" />
     <meta name="keywords" content="애경, AK 홀딩스, AK, 애경 그룹, 애경 그룹지주사, 애경산업, AK플라자, 애경케미칼, 제주항공, 중부CC"/>
