--- a/ak_news_detail.html
+++ b/ak_news_detail.html
@@ -206,7 +206,7 @@ AK플라자는 애경그룹 지주회사인 AK홀딩스,
 방식으로 진행된다.</div>
             </div>
             <ul class="bbs-more">
-                <li class="prev">
+                <li class="prev disabled"><!-- 6/8 업데이트 이전/다음글 없을 시 disabled 추가 -->
                     <span class="pc">이전</span>
                     <a href="#"><span class="blind">이전글보기</span>[애경케미칼] 혈액 수급난에 동참 '임직원 헌혈참여 캠페인' 진행</a>
                 </li>
