--- a/esg_news.html
+++ b/esg_news.html
@@ -287,7 +287,7 @@
         <!-- 페이징 -->
         <div class="paging">
             <div class="left">
-                <a href="javascript:;" class="first arrow disabled"><span class="blind">처음으로</span></a>
+                <a href="javascript:;" class="first arrow disabled"><span class="blind">처음으로</span></a><!-- 비활성화시 disabled 추가 -->
                 <a href="javascript:;" class="prev arrow disabled"><span class="blind">이전으로</span></a>
             </div>
             <div class="center">
