--- a/list.html
+++ b/list.html
@@ -99,6 +99,7 @@
         <td><p>5/29업데이트</p>
             <p style="color:#ff00ff;">6/2업데이트 - 비주얼이미지 경로수정</p>
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
+            <p style="color: #00498C">6/8 업데이트 이전/다음글 없을 시 수정</p>
         </td>
     </tr>
     <tr>
@@ -114,6 +115,7 @@
         <td><a href="/esg_news_detail.html">esg_news_detail.html</a></td>
         <td>5/29업데이트
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+        <p style="color: #00498C">6/8 업데이트 이전/다음글 없을 시 수정</p>
     </tr>
     <tr>
         <td>6</td>
