--- a/ir_governance.html
+++ b/ir_governance.html
@@ -774,7 +774,7 @@
         </div>
         <div class="pop-con">
             <div>
-                <h6>제1조 (목적)</h6>
+                <h6>제1장 (총칙)</h6>
                 <ul>
                     <li>
                         <p>제1조 (목적)</p>
@@ -786,7 +786,7 @@
                         정하여진 것 이외에는 이 규정이 정하는 바에 의한다.
                     </li>
                     <li>
-                        <p>제3조 (권한)</p><!-- 6/6업데이트 오타수정 -->
+                        <p>제3조 (직무와 권한)</p><!-- 6/6업데이트 오타수정 -->
                         <ul>
                             <li><em>①</em>위원회는 회사의 회계와 업무를 감사한다.</li>
                             <li><em>②</em>위원회는 회의의 목적사항과 소집의 이유를 기재한
