--- a/financial_income2019.html
+++ b/financial_income2019.html
@@ -170,6 +170,7 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
+                <li class="mo"><a href="javascript:;">재무상태표</a></li>
                 <li class="active"><a href="javascript:;">재무상태표</a></li>
                 <li><a href="/financial_statement2021.html">손익계산서</a></li>
                 <li><a href="/financial_cash2021.html">현금흐름표</a></li>
