--- a/investment_info.html
+++ b/investment_info.html
@@ -181,7 +181,7 @@
 <!--본문영역-->
 <div class="content">
     <div class="cont">
-        <div style="text-align: center;">
+        <div class="iframe-wrap"><!-- 6/8 업데이트 iframe 영역 -->
             공시자료 iFrame 영역
         </div>
     </div>
