--- a/list.html
+++ b/list.html
@@ -114,8 +114,9 @@
         <td>뉴스룸 > ESG 소식 상세</td>
         <td><a href="/esg_news_detail.html">esg_news_detail.html</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
-        <p style="color: #00498C">6/8 업데이트 이전/다음글 없을 시 수정</p>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
+            <p style="color: #00498C">6/8 업데이트 이전/다음글 없을 시 수정</p>
+        </td>
     </tr>
     <tr>
         <td>6</td>
@@ -237,7 +238,9 @@
         <td>IR > 공시정보 > 공시자료</td>
         <td><a href="/investment_info.html">investment_info.html</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
+            <p style="color: #00498C">6/8 업데이트 iframe 영역</p>
+        </td>
     </tr>
     <tr>
         <td>10</td>
